--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(simple-http VERSION 0.1)
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(serverlib)
+add_subdirectory(cppunitlib)
 
 set(SRCS
     main.cpp
